Site style created

--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 
-  HOME
+<center>
+  <h1>Home page</h1>
+  <br>
+  <br>
+  <h2>This is a to-do list site.</h2>
+  <br>
+  <h2>To start using the site, you need to create an account.</h2>
+  <br>
+  <h2>If an account has already been created, then you can use the site's functionality to create tasks and control their execution.</h2>
+</center>
 
 {% endblock %}
