--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -1,24 +1,62 @@
+<!doctype html>
+<html lang="en">
+  <head>
 
-{% if user.is_authenticated %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-Logged in as {{ user.username }}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-<form action="{% url 'logoutuser' %}" method="POST">
-  {% csrf_token %}
-<button type="submit">Logout</button>
-<a href="{% url 'createtodo' %}">Create Todo</a>
-<a href="{% url 'currenttodos' %}">Current Todos</a>
-<a href="{% url 'completedtodos' %}">Completed Todos</a>
-</form>
+    <title>Todo list by Greg0ryyy</title>
+  </head>
+  <body>
+    {% if user.is_authenticated %}
 
-{% else %}
+    <form action="{% url 'logoutuser' %}" method="POST">
+      {% csrf_token %}
 
-<a href="{% url 'signupuser' %}">Signup</a>
-<a href="{% url 'loginuser' %}">Login</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-xxl">
+          <a class="navbar-brand" href="{% url 'createtodo' %}">Create Todo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <a class="nav-link active" aria-current="page" href="{% url 'currenttodos' %}">Current Todos</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'completedtodos' %}">Completed Todos</a>
+            </ul>
+              <span class="navbar-text">
+                Logged in as {{ user.username }}
+              </span>
+              <div class="p-2 bd-highlight">
+                <button class="btn btn-outline-success" type="submit">Logout</button>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </form>
 
-{% endif %}
-<br>
-<br>
-<br>
+    {% else %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-xxl">
+      <div class="p-2 bd-highlight">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <a class="nav-link active" aria-current="page" href="{% url 'signupuser' %}">Signup</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'loginuser' %}">Login</a>
+        </ul>
+      </div>
+    </div>
+    </nav>
 
-{% block content %}{% endblock %}
+    {% endif %}
+    <div class="container-xxl">
+    <br>
+    <br>
+    <br>
+
+    {% block content %}{% endblock %}
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
+</html>
