--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -7,11 +7,11 @@ Current todos:
 <ul>
   {% for todo in todos %}
     <li>
-      {% if todo.important %}<b>{% endif %}
+      {% if todo.important %}<strong>{% endif %}
         <a href="{% url 'viewtodo' todo.id %}">
           {{ todo.title }}
         </a>
-      {% if todo.important %}</b>{% endif %}
+      {% if todo.important %}</strong>{% endif %}
     </li>
   {% endfor %}
 </ul>
