--- a/todo/templates/todo/loginuser.html
+++ b/todo/templates/todo/loginuser.html
@@ -10,7 +10,7 @@
 <form method="POST">
   {% csrf_token %}
 {{ form.as_p }}
-<button type="submit">Login</button>
+<button class="btn btn-primary" type="submit">Login</button>
 </form>
 
 {% endblock %}
